done the function addPlan in travel_group.js
